@startuml
class Program {
  +void StartApplication()
  +void ConfigureMiddleware()
  +void MapFallbackRoute()
}
class EndpointService {
  +void LoadConfigurations()
  +void GetExecutorConfiguration(string executor)
  +void GetEndpointConfiguration(string path)
}
class RequestProcessor {
  +void ProcessRequest(HttpContext context, IEndpointExecutor executor, ExecutorConfiguration configuration)
}
class EndpointExecutor {
  +void ExecuteEndpoint()
}
Program "1" -- "1" EndpointService : Creates
Program "1" -- "1" RequestProcessor : Creates
Program "1" -- "1" EndpointExecutor : Creates
@enduml

View Diagram: https://showme.redstarplugin.com/d/15f8cijM